--- a/index.html
+++ b/index.html
@@ -2,32 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <main>
 
-  Equilibrium #3429
+    <div class="container">
 
-  Our Equilibrium collection promotes balance and calm.
+      <div class="image">
+        <a href="#"><img src="images/image-equilibrium.jpg" alt="Equilibrium NFT"></a>
+      </div>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+        <div class="description">
+          <h1><a href="#">Equilibrium #3429</a></h1>
+          <p>Our Equilibrium collection promotes balance and calm.</p>
+        </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+        <div class="price">
+          <p id="coin">0.041 ETH</p>
+          <p id="time">3 days left</p>
+        </div>
+      
+        <div class="author">
+          <img src="images/image-avatar.png" alt="Jules Wyvern">
+          <p>Creation of <a href="">Jules Wyvern</a></p>
+        </div>
+
+    </div>
+
+  </main>
+
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/nathanfabio">Nathan Fabio</a>.
+    </div>
+  </footer>
+
 </body>
 </html>
